@qtxr/vue-admin 1.8.9 - 95: Fixed z-index issue for loading boxes, updated dependencies

--- a/pkg/vue-admin/style/loading-box.scss
+++ b/pkg/vue-admin/style/loading-box.scss
@@ -17,7 +17,7 @@ $loading-box-params: (
 		background: $background;
 		opacity: 1;
 		transition: opacity $transition;
-		z-index: 10000000;
+		z-index: 1000000;
 
 		&.loading-fade-enter,
 		&.loading-fade-leave-to {
